[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/actors/player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/Retro Gun Multishots 6 Delay9 03.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/Retro Weapon Reload 03.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Retro FootStep Grass 01.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BulletSpawn" type="Node2D" parent="."]
position = Vector2( 38, 0 )

[node name="GunFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 2.42

[node name="GunReload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 2.0

[node name="Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -17.936
pitch_scale = 0.67

[connection signal="finished" from="GunFire" to="." method="_on_GunFire_finished"]
[connection signal="finished" from="GunReload" to="." method="_on_GunReload_finished"]
[connection signal="finished" from="Walk" to="." method="_on_Walk_finished"]
